Sync all content

--- a/content/resources/21a-441s04-th.md
+++ b/content/resources/21a-441s04-th.md
@@ -4,6 +4,8 @@ description: New image Upload
 file: /courses/21a-441-the-conquest-of-america-spring-2004/f314775051eb1905214937da980dcaec_21a-441s04-th.jpg
 file_size: 10667
 file_type: image/jpeg
+hide_download: true
+hide_download_original: null
 image_metadata:
   caption: Mariage des indiens du Panama. (Image courtesy of Prof. James Howe.)
   credit: ''
